# docs/swagger.yaml
@@ -1,8 +1,16 @@
 basePath: /api
 definitions:
+  auth.CredentialsData:
+    properties:
+      access_token:
+        $ref: '#/definitions/shared.TokenData'
+      refresh_token:
+        $ref: '#/definitions/shared.TokenData'
+    type: object
   auth.ForgotPasswordRequest:
     properties:
       email:
+        example: johndoe@example.com
         type: string
     required:
     - email
@@ -17,22 +25,32 @@ definitions:
   auth.LoginRequest:
     properties:
       email:
+        example: johndoe@example.com
         type: string
       password:
+        example: password123
         type: string
     required:
     - email
     - password
     type: object
   auth.LoginResponse:
+    properties:
+      credentials:
+        $ref: '#/definitions/auth.CredentialsData'
+      user:
+        $ref: '#/definitions/user.UserResponse'
     type: object
   auth.RegisterRequest:
     properties:
       email:
+        example: johndoe@example.com
         type: string
       name:
+        example: John Doe
         type: string
       password:
+        example: password123
         minLength: 8
         type: string
     required:
@@ -41,10 +59,14 @@ definitions:
     - password
     type: object
   auth.RegisterResponse:
+    properties:
+      user:
+        $ref: '#/definitions/user.UserResponse'
     type: object
   auth.ResetPasswordRequest:
     properties:
       new_password:
+        example: newpassword123
         minLength: 8
         type: string
       token:
@@ -63,25 +85,33 @@ definitions:
   user.ProfileResponse:
     properties:
       date_birth:
+        example: "1990-01-01"
         type: string
       first_name:
+        example: John
         type: string
       gender:
+        example: Male
         type: string
       last_name:
+        example: Doe
         type: string
       photo:
+        example: https://example.com/photo.jpg
         type: string
     type: object
   user.UserResponse:
     properties:
       email:
+        example: johndoe@example.com
         type: string
       id:
+        example: "1"
         type: string
       profile:
         $ref: '#/definitions/user.ProfileResponse'
       username:
+        example: johndoe
         type: string
     type: object
 info:
@@ -145,7 +175,7 @@ paths:
       tags:
       - Auth
   /auth/me:
-    post:
+    get:
       consumes:
       - application/json
       description: User
@@ -164,6 +194,11 @@ paths:
             $ref: '#/definitions/user.UserResponse'
         "403":
           description: Forbidden
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
           schema:
             additionalProperties: true
             type: object
